--- a/assets/main.css
+++ b/assets/main.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-body, button, .title-site, .search-box__input {
+body, button, .title-site {
   font-family: 'Open Sans', sans-serif;
   font-weight: normal;
   font-style: normal; }
@@ -15,19 +15,16 @@ h3, .btn-group, .fiche__cle, .connexions__libelle {
   font-weight: bold;
   font-style: normal; }
 
-.fiche__label, .card__label {
+.fiche__label, .search-box__input, .search-list li, .card__label {
   font-family: 'Open Sans Condensed', sans-serif;
   font-weight: 300;
   font-style: normal; }
 
-.btn-group, .lang-box__flag, .fiche__img, .card, .card__img {
+.lateral, .btn-group, .entete__fixe.entete__fixe--active, .lang-box__flag, .fiche__img, .search-box__input, .card, .card__img {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); }
 
 .sort-alphabetic-list, .overflow {
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23); }
-
-.lateral, .entete__fixe.entete__fixe--active {
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23); }
 
 @font-face {
   font-family: 'Open Sans Condensed';
@@ -425,21 +422,24 @@ button:focus {
   .search-box__label {
     cursor: pointer;
     position: absolute;
-    width: 15px;
-    height: 15px;
+    width: 25px;
+    height: 25px;
     background-size: 15px;
+    background-color: white;
     background-image: url("./icons/search.svg");
     display: block;
-    left: 7px;
+    left: 0px;
     z-index: 1;
-    top: 5px; }
+    top: 0px;
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 3px 0 0 3px; }
   .search-box__input {
     position: relative;
     box-sizing: border-box;
     font-size: 18px;
     border-radius: 5px;
     border: unset;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     text-indent: 30px; }
 
 .search-list {
