--- a/assets/main.css
+++ b/assets/main.css
@@ -553,28 +553,11 @@ button:focus {
     cursor: pointer;
     position: relative;
     text-transform: uppercase;
-    padding: 5px 2px;
     margin: 5px;
     font-family: monospace;
-    font-size: 14px; }
-    .sort-alphabetic-list__caracter::after {
-      content: '';
-      z-index: -1;
-      position: absolute;
-      bottom: 2px;
-      left: 2px;
-      height: 1px;
-      width: 10px;
-      background-color: black;
-      transition: height .1s, width .05s;
-      transition-timing-function: cubic-bezier(0.96, 0, 0.19, 1.12); }
+    font-size: 18px; }
     .sort-alphabetic-list__caracter:hover {
-      color: white; }
-      .sort-alphabetic-list__caracter:hover::after {
-        height: 100%;
-        width: 100%;
-        left: 0px;
-        border-radius: 2px; }
+      text-decoration: underline; }
 
 .card {
   position: relative;
