--- a/assets/main.css
+++ b/assets/main.css
@@ -268,17 +268,18 @@ button:focus {
     display: flex;
     list-style: none;
     padding: unset;
-    margin: unset; }
+    margin: unset;
+    margin: 0 20px 10px 0; }
   .navigation__link {
     cursor: pointer;
     position: relative;
-    margin: 0 20px;
+    margin: 0 5px;
     padding: 5px 7px;
     color: black;
     font-size: 18px; }
     .navigation__link:first-child {
       padding: 5px 7px 5px 0;
-      margin: 0 20px 0 0; }
+      margin: 0 5px 0 0; }
     .navigation__link--active {
       text-decoration: underline; }
     .navigation__link:hover {
@@ -305,7 +306,7 @@ button:focus {
 
 .fiche__content {
   overflow: auto;
-  height: calc(100% - 25px);
+  height: 100%;
   box-sizing: border-box;
   padding: 10px;
   visibility: hidden; }
@@ -435,7 +436,7 @@ button:focus {
     cursor: pointer;
     position: absolute;
     width: 24px;
-    height: 24px;
+    height: 27px;
     background-size: 15px;
     background-color: white;
     background-image: url("./icons/search.svg");
@@ -453,7 +454,8 @@ button:focus {
     border-radius: 5px;
     border: unset;
     text-indent: 30px;
-    width: 100%; }
+    width: 100%;
+    height: 27px; }
 
 .search-list {
   position: absolute;
