--- a/doc/fr/docs/extras/style.css
+++ b/doc/fr/docs/extras/style.css
@@ -14,3 +14,22 @@
 .md-typeset table:not([class]) {
     font-size: unset !important ;
 }
+
+img {
+    float: left;
+    width: 45%;
+    margin: 5% 5% 5% 0;
+}
+
+@media (max-width: 700px) {
+    img {
+        float: unset;
+        margin: unset;
+    }
+}
+
+@media (max-width: 400px) {
+    img {
+        width: 100%;
+    }
+}
