--- a/assets/main.css
+++ b/assets/main.css
@@ -81,11 +81,11 @@ h1 {
   font-size: 28px; }
 
 h2 {
-  margin: 30px 0 10px 0;
+  margin: unset;
   font-size: 24px; }
 
 h3 {
-  margin: 30px 0 10px 0;
+  margin: unset;
   font-size: 18px; }
 
 body {
