[fix] reload board on btn group push

--- a/assets/main.css
+++ b/assets/main.css
@@ -154,6 +154,7 @@ button:focus {
       display: none; }
 
 .btn-group {
+  cursor: pointer;
   position: relative;
   border: unset;
   display: block;
