--- a/assets/main.css
+++ b/assets/main.css
@@ -25,7 +25,7 @@ h3, .btn-group, .title-site, .lang-box__flag, .lang-box__separator, .navigation_
   font-weight: 300;
   font-style: normal; }
 
-.lateral, .btn-group, .entete__fixe.entete__fixe--active, .fiche__img, .search-box__input, .card, .card__img {
+.lateral, .btn-group, .entete, .fiche__img, .search-box__input, .card, .card__img {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); }
 
 .sort-alphabetic-list, .overflow {
@@ -191,9 +191,9 @@ button:focus {
     content: ''; }
 
 .introduction {
+  margin-top: 90px;
   overflow-y: auto;
-  padding: 10px;
-  height: calc(100vh - 50px); }
+  padding: 10px; }
   .introduction h1 {
     margin: 0; }
   .introduction__img-otlet {
@@ -211,27 +211,21 @@ button:focus {
     object-fit: contain; }
 
 .entete {
-  position: relative;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  z-index: 999;
   box-sizing: border-box;
-  z-index: 999; }
-  .entete__fixe {
-    left: 0px;
-    padding: 10px 20px 0 20px; }
-    .entete__fixe.entete__fixe--active {
-      box-sizing: border-box;
-      position: fixed;
-      top: 0px;
-      left: 0px;
-      background-color: white;
-      width: 100%;
-      height: 90px; }
-  .entete__top {
-    display: flex;
-    justify-content: space-between;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none; }
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 20px 0 20px;
+  width: 100%;
+  height: 90px;
+  background-color: white; }
   .entete__col {
     display: flex;
     flex-direction: column;
@@ -240,7 +234,6 @@ button:focus {
   .entete__identite {
     cursor: pointer;
     display: flex;
-    align-items: center;
     margin-bottom: 10px; }
 
 .title-site {
@@ -265,7 +258,8 @@ button:focus {
 .navigation {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between; }
+  justify-content: space-between;
+  width: 100%; }
   .navigation__list {
     display: flex;
     list-style: none;
@@ -482,6 +476,7 @@ button:focus {
   position: relative;
   width: 100vw;
   height: calc(100vh - 90px);
+  margin-top: 90px;
   background-color: #1b1b1b; }
 
 .network {
