--- a/assets/main.css
+++ b/assets/main.css
@@ -264,7 +264,6 @@ button:focus {
     display: flex;
     list-style: none;
     padding: unset;
-    margin: unset;
     margin: 0 20px 10px 0; }
   .navigation__link {
     cursor: pointer;
@@ -272,7 +271,10 @@ button:focus {
     margin: 0 5px;
     padding: 5px 7px;
     color: black;
-    font-size: 18px; }
+    font-size: 18px;
+    background-color: transparent;
+    border: unset;
+    height: unset; }
     .navigation__link:first-child {
       padding: 5px 7px 5px 0;
       margin: 0 5px 0 0; }
@@ -280,14 +282,6 @@ button:focus {
       text-decoration: underline; }
     .navigation__link:hover {
       text-decoration: underline; }
-  .navigation__globe {
-    cursor: pointer;
-    width: 30px;
-    height: 30px;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
-    background-image: url("./icons/infos.svg"); }
 
 .toolbar {
   display: flex;
