--- a/assets/main.css
+++ b/assets/main.css
@@ -73,6 +73,30 @@ h3, .btn-group, .title-site, .lang-box__flag, .lang-box__separator, .navigation_
   font-style: normal;
   font-display: swap; }
 
+@-webkit-keyframes valid {
+  0% {
+    background-color: black; }
+  10% {
+    background-color: #148114; }
+  50% {
+    background-color: #36c536; }
+  90% {
+    background-color: #148114; }
+  100% {
+    background-color: black; } }
+
+@keyframes valid {
+  0% {
+    background-color: black; }
+  10% {
+    background-color: #148114; }
+  50% {
+    background-color: #36c536; }
+  90% {
+    background-color: #148114; }
+  100% {
+    background-color: black; } }
+
 body {
   font-size: 14px;
   line-height: 160%; }
@@ -393,6 +417,19 @@ button:focus {
     top: 50px;
     padding-top: 8px;
     padding-right: 4px; }
+
+.fiche__permalien {
+  width: 100%;
+  background-color: black;
+  color: white;
+  border: 0;
+  padding: 5px 0;
+  margin-top: 15px; }
+  .fiche__permalien--active {
+    -webkit-animation-name: valid;
+    animation-name: valid;
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s; }
 
 .fiche--active {
   transform: unset; }
