--- a/assets/main.css
+++ b/assets/main.css
@@ -246,7 +246,7 @@ button:focus {
   top: 0px;
   left: 0px;
   display: flex;
-  justify-content: space-between;
+  justify-content: left;
   padding: 10px 20px 0 20px;
   width: 100%;
   height: 90px;
@@ -522,7 +522,6 @@ button:focus {
     border: unset;
     width: 50px;
     height: 50px;
-    -webkit-filter: drop-shadow(0px 0px 10px rgba(66, 66, 66, 0.5));
     filter: drop-shadow(0px 0px 10px rgba(66, 66, 66, 0.5)); }
     .network__btn--right {
       right: 15px;
