--- a/assets/main.css
+++ b/assets/main.css
@@ -419,17 +419,20 @@ button:focus {
     padding-right: 4px; }
 
 .fiche__permalien {
-  width: 100%;
+  cursor: pointer;
   background-color: black;
   color: white;
   border: 0;
   padding: 5px 0;
-  margin-top: 15px; }
+  margin-top: 15px;
+  width: 90px; }
   .fiche__permalien--active {
     -webkit-animation-name: valid;
     animation-name: valid;
     -webkit-animation-duration: 1s;
-    animation-duration: 1s; }
+    animation-duration: 1s;
+    -webkit-animation-timing-function: linear;
+    animation-timing-function: linear; }
 
 .fiche--active {
   transform: unset; }
@@ -522,6 +525,7 @@ button:focus {
     border: unset;
     width: 50px;
     height: 50px;
+    -webkit-filter: drop-shadow(0px 0px 10px rgba(66, 66, 66, 0.5));
     filter: drop-shadow(0px 0px 10px rgba(66, 66, 66, 0.5)); }
     .network__btn--right {
       right: 15px;
