--- a/doc/style.css
+++ b/doc/style.css
@@ -1,9 +1,12 @@
 * {	box-sizing: border-box; }
 
 :root {
-	--sans: 'Helvetica Neue', sans-serif;
+	--sans: "Helvetica Neue", Helvetica, sans-serif;
 	--serif: Georgia, serif;
+	--mono: Menlo, Monaco, Consolas, "Courier New", monospace;
 	--accent-color: #c9c9fa;
+	--code-background-color: #f5f5f5;
+	--code-border-color: #ccc;
 	font-size: 100%;
 }
 
@@ -13,19 +16,39 @@ body {
 	line-height: 1.5;
 }
 
-aside {
-	background: #eeeeee;
-	position: fixed;
-	height: 100%;
-	left: 0;
-	top: 0;
-	width: 250px;
+div.container {
+	display: flex;
+	flex-flow: row nowrap;
+}
+
+nav {
+	width: 25%;
 	overflow: auto;
+	margin: 2rem 1rem;
+}
+
+nav {
+	overflow: auto;
+}
+
+nav ul {
+	font-family: var(--sans);
+	font-size: 0.9rem;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+nav > ul > li > a {
+	font-weight: bold;
+}
+
+nav ul ul {
+	padding-left: 1rem;
 }
 
 main {
 	position: relative;
-	margin-left: 300px;
 	padding: 1rem;
 	max-width: 700px;
 }
@@ -33,6 +56,11 @@ main {
 h1,h2,h3,h4,h5,h6 {
 	font-family: var(--sans);
 	line-height: 1.2;
+}
+
+.header-section-number::after,
+.toc-section-number::after {
+	content: '.';
 }
 
 h1 {
@@ -52,36 +80,25 @@ main h1.title {
 	margin: 1rem 0 2rem 0;
 }
 
-@media (max-width: 700px) {
-	aside { display: none; }
-	main { margin-left: unset; }
+.sommaire { display: none; }
+
+ul, ol {
+	padding-left: 1.1rem;
 }
 
-nav {
-	overflow: auto;
+a {
+	color: #337ab7;
+	text-decoration: none;
 }
-
-nav ul {
-	font-family: var(--sans);
-	font-size: 0.9rem;
-	list-style: none;
-	margin: 0;
-	padding: 0;
+a:focus,
+a:hover {
+	color: #23527c;
+	text-decoration: underline;
 }
-
-ul ul {
-	padding-left: 1.5rem;
-}
-
 nav a {
 	display: block;
-	padding: 0.5rem 0 0.5rem 0.9rem;
+	padding: 0 0 0.5rem 0rem;
 	margin: 0;
-	color: inherit;
-}
-
-nav a:hover {
-	background: var(--accent-color);
 }
 
 figure {
@@ -99,12 +116,94 @@ img {
 
 figcaption {
 	font-size: 0.8rem;
-	font-family: monospace;
+	font-family: var(--mono);
 }
 
+code, pre { font-family: var(--mono); }
 code {
 	display: inline-block;
+	font-size: 90%;
 }
+p code,
+ul code,
+ol code {
+	background-color: var(--code-background-color);
+	border: 1px solid var(--code-border-color);
+	border-radius: 4px;
+	padding: 0 0.2em;
+}
+pre {
+	background-color: var(--code-background-color);
+	border: 1px solid var(--code-border-color);
+	border-radius: 4px;
+	padding-left: 0.5em;
+	overflow-x: auto;
+}
+
+/* SYNTAX HIGHLIGHTING */
+
+pre > code.sourceCode { white-space: pre; position: relative; }
+pre > code.sourceCode > span { display: inline-block; line-height: 1.25; }
+pre > code.sourceCode > span:empty { height: 1.2em; }
+code.sourceCode > span { color: inherit; text-decoration: inherit; }
+div.sourceCode { margin: 1em 0; }
+pre.sourceCode { margin: 0; }
+@media screen {
+div.sourceCode { overflow: auto; }
+}
+@media print {
+pre > code.sourceCode { white-space: pre-wrap; }
+pre > code.sourceCode > span { text-indent: -5em; padding-left: 5em; }
+}
+pre.numberSource code
+  { counter-reset: source-line 0; }
+pre.numberSource code > span
+  { position: relative; left: -4em; counter-increment: source-line; }
+pre.numberSource code > span > a:first-child::before
+  { content: counter(source-line);
+    position: relative; left: -1em; text-align: right; vertical-align: baseline;
+    border: none; display: inline-block;
+    -webkit-touch-callout: none; -webkit-user-select: none;
+    -khtml-user-select: none; -moz-user-select: none;
+    -ms-user-select: none; user-select: none;
+    padding: 0 4px; width: 4em;
+    color: #aaaaaa;
+  }
+pre.numberSource { margin-left: 3em; border-left: 1px solid #aaaaaa;  padding-left: 4px; }
+div.sourceCode
+  {   }
+@media screen {
+pre > code.sourceCode > span > a:first-child::before { text-decoration: underline; }
+}
+code span.al { color: #ff0000; font-weight: bold; } /* Alert */
+code span.an { color: #60a0b0; font-weight: bold; font-style: italic; } /* Annotation */
+code span.at { color: #7d9029; } /* Attribute */
+code span.bn { color: #40a070; } /* BaseN */
+code span.bu { } /* BuiltIn */
+code span.cf { color: #007020; font-weight: bold; } /* ControlFlow */
+code span.ch { color: #4070a0; } /* Char */
+code span.cn { color: #880000; } /* Constant */
+code span.co { color: #60a0b0; font-style: italic; } /* Comment */
+code span.cv { color: #60a0b0; font-weight: bold; font-style: italic; } /* CommentVar */
+code span.do { color: #ba2121; font-style: italic; } /* Documentation */
+code span.dt { color: #902000; } /* DataType */
+code span.dv { color: #40a070; } /* DecVal */
+code span.er { color: #ff0000; font-weight: bold; } /* Error */
+code span.ex { } /* Extension */
+code span.fl { color: #40a070; } /* Float */
+code span.fu { color: #06287e; } /* Function */
+code span.im { } /* Import */
+code span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Information */
+code span.kw { color: #007020; font-weight: bold; } /* Keyword */
+code span.op { color: #666666; } /* Operator */
+code span.ot { color: #007020; } /* Other */
+code span.pp { color: #bc7a00; } /* Preprocessor */
+code span.sc { color: #4070a0; } /* SpecialChar */
+code span.ss { color: #bb6688; } /* SpecialString */
+code span.st { color: #4070a0; } /* String */
+code span.va { color: #19177c; } /* Variable */
+code span.vs { color: #4070a0; } /* VerbatimString */
+code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warning */
 
 .astuce, .tip {
 	position: relative;
@@ -119,7 +218,7 @@ code {
 	top: 5px;
 	left: 5px;
 	font-size: 12px;
-	font-family: monospace;
+	font-family: var(--mono);
 }
 .tip::before {
 	position: absolute;
@@ -127,28 +226,16 @@ code {
 	top: 5px;
 	left: 5px;
 	font-size: 12px;
-	font-family: monospace;
+	font-family: var(--mono);
 }
 
-ul.languages {
-	list-style: none;
-}
+/* RESPONSIVENESS */
 
-ul.languages a {
-	display: block;
-	background: rgb(241, 241, 241);
-	padding: 2rem;
-	margin: 0.2rem 0;
-	text-decoration: none;
-}
-
-ul.languages a:hover {
-	background: #ccc;
-}
-
-.github {
-	font-size: 1.2rem;
-	font-family: sans-serif;
-	text-align: center;
-	margin: 0;
+@media (max-width: 900px) {
+	nav { display: none; }
+	.sommaire { display: block }
+	main {
+		margin: 0 auto;
+		width: 99vw;
+	}
 }
