--- a/doc/style.css
+++ b/doc/style.css
@@ -10,15 +10,27 @@
 	font-size: 100%;
 }
 
+body,
+html,
+.container {
+  height: 100%;
+  max-height: 100%;
+}
+
 body {
 	font-family: var(--serif);
 	font-size: 1rem;
 	line-height: 1.5;
+	overflow: hidden;
 }
 
-div.container {
+.container {
 	display: flex;
 	flex-flow: row nowrap;
+}
+
+.container nav, .container main {
+	overflow: auto;
 }
 
 nav {
