--- a/doc/style.css
+++ b/doc/style.css
@@ -1,123 +1,116 @@
-* {	box-sizing: border-box; }
+/* VARIABLES */
 
 :root {
-	--sans: "Helvetica Neue", Helvetica, sans-serif;
-	--serif: Georgia, serif;
-	--mono: Menlo, Monaco, Consolas, "Courier New", monospace;
-	--accent-color: #c9c9fa;
-	--code-background-color: #f5f5f5;
-	--code-border-color: #ccc;
-	font-size: 100%;
+  --sans: "Helvetica Neue", Helvetica, sans-serif;
+  --serif: Georgia, serif;
+  --mono: Menlo, Monaco, Consolas, "Courier New", monospace;
+  --code-background-color: #f5f5f5;
+  --code-border-color: #ccc;
+  font-size: 100%;
 }
 
-body,
-html,
-.container {
+/* LAYOUT */
+
+* {  box-sizing: border-box; }
+html, body {
   height: 100%;
   max-height: 100%;
 }
-
 body {
-	margin: 0;
-	padding: 0;
-	font-family: var(--serif);
-	font-size: 1rem;
-	line-height: 1.5;
-	overflow: hidden;
+  margin: 0;
+  padding: 0;
+  font-family: var(--serif);
+  font-size: 1rem;
+  line-height: 1.5;
+  overflow: hidden;
+  display: flex;
+  flex-flow: row nowrap;
 }
-
-.container {
-	display: flex;
-	flex-flow: row nowrap;
-}
-
-.container nav, .container main {
-	overflow: auto;
-}
-
+nav, main { overflow: auto; }
 nav {
-	width: 25%;
-	overflow: auto;
-	margin: 2rem 1rem 0 1rem;
+  width: 25%;
+  overflow: auto;
+  margin: 2rem 1rem 0 1rem;
 }
-
-nav {
-	overflow: auto;
-}
-
 nav ul {
-	font-family: var(--sans);
-	font-size: 0.9rem;
-	list-style: none;
-	margin: 0;
-	padding: 0;
+  font-family: var(--sans);
+  font-size: 0.9rem;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
-
-nav > ul > li > a {
-	font-weight: bold;
+nav ul ul { padding-left: 1rem; }
+nav > ul > li > a { font-weight: bold; }
+nav a {
+  display: block;
+  padding: 0 0 0.2rem 0rem;
+  margin: 0;
 }
-
-nav ul ul {
-	padding-left: 1rem;
+.sommaire { display: none; }
+@media (max-width: 900px) {
+  nav { display: none; }
+  .sommaire { display: block }
+  main {
+    margin: 0 auto;
+    width: 99vw;
+  }
 }
-
 main {
-	position: relative;
-	padding: 1rem;
-	max-width: 700px;
+  position: relative;
+  padding: 1rem;
+  max-width: 700px;
 }
+.header-section-number::after,
+.toc-section-number::after { content: '.'; }
+
+/* HEADINGS */
 
 h1,h2,h3,h4,h5,h6 {
-	font-family: var(--sans);
-	line-height: 1.2;
+  font-family: var(--sans);
+  line-height: 1.2;
 }
-
-.header-section-number::after,
-.toc-section-number::after {
-	content: '.';
-}
-
 h1 {
-	font-size: 1.3em;
-	margin: 3rem 0 0.5rem 0;
+  font-size: 1.3em;
+  margin: 3rem 0 0.5rem 0;
 }
 h2 {
-	font-size: 1.2em;
-	margin: 2rem 0 0.3rem 0;
+  font-size: 1.2em;
+  margin: 2rem 0 0.3rem 0;
 }
 h3 {
-	font-size: 1em;
-	margin: 2rem 0 0 0;
+  font-size: 1em;
+  margin: 2rem 0 0 0;
 }
-
-
-h2#toc-title { padding: 0 0 0 0.5em }
-
 main h1.title {
-	font-size: 2em;
-	text-align: center;
-	margin: 1rem 0 2rem 0;
+  font-size: 2em;
+  text-align: center;
+  margin: 1rem 0 2rem 0;
 }
 
-.sommaire { display: none; }
+/* LISTS */
 
-ul, ol {
-	padding-left: 1.1rem;
+ul, ol { padding-left: 1.1rem; }
+dt {
+  font-family: var(--sans);
+  font-weight: bold;
+  float: left;
+  padding: 0 0.5rem 0 0;
 }
+dd {
+  margin: 0;
+  padding: 0 0 0.2rem 1rem;
+}
+
+/* LINKS */
 
 a {
-	color: #337ab7;
-	text-decoration: none;
+  color: #337ab7;
+  text-decoration: none;
 }
 a:focus,
 a:hover {
-	color: #23527c;
-	text-decoration: underline;
-}
-nav a {
-	display: block;
-	padding: 0 0 0.2rem 0rem;
-	margin: 0;
+  color: #23527c;
+  text-decoration: underline;
 }
 :target { animation: highlight 3s ease; }
 @keyframes highlight {
@@ -125,153 +118,68 @@ nav a {
   100% { background-color: #ffffff; }
 }
 
+/* MEDIA */
 
+img { max-width: 100%; }
 figure {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	border: var(--accent-color) 1px solid;
-	padding: 15px 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: var(--accent-color) 1px solid;
+  padding: 15px 10px;
 }
-
-img {
-	width: 100%;
-	max-width: 350px;
-}
-
 figcaption {
-	font-size: 0.8rem;
-	font-family: var(--mono);
-	padding: 1rem 0 0 0;
+  font-size: 0.8rem;
+  font-family: var(--mono);
+  padding: 1rem 0 0 0;
 }
+
+/* MISC */
+
+.astuce, .tip {
+  position: relative;
+  background: rgb(225, 225, 225);
+  padding: 30px 10px 3px 10px;
+  border-radius: 5px;
+}
+.astuce::before {
+  position: absolute;
+  content: 'astuce';
+  top: 5px;
+  left: 5px;
+  font-size: 12px;
+  font-family: var(--mono);
+}
+.tip::before {
+  position: absolute;
+  content: 'tip';
+  top: 5px;
+  left: 5px;
+  font-size: 12px;
+  font-family: var(--mono);
+}
+
+/* CODE */
 
 code, pre { font-family: var(--mono); }
 code {
-	display: inline-block;
-	font-size: 90%;
+  display: inline-block;
+  font-size: 90%;
 }
 p code,
 ul code,
 ol code {
-	background-color: var(--code-background-color);
-	border: 1px solid var(--code-border-color);
-	border-radius: 4px;
-	padding: 0 0.2em;
+  background-color: var(--code-background-color);
+  border: 1px solid var(--code-border-color);
+  border-radius: 4px;
+  padding: 0 0.2em;
 }
 pre {
-	background-color: var(--code-background-color);
-	border: 1px solid var(--code-border-color);
-	border-radius: 4px;
-	padding-left: 0.5em;
-	overflow-x: auto;
+  background-color: var(--code-background-color);
+  border: 1px solid var(--code-border-color);
+  border-radius: 4px;
+  padding-left: 0.5em;
+  overflow-x: auto;
 }
-
-/* SYNTAX HIGHLIGHTING */
-
-pre > code.sourceCode { white-space: pre; position: relative; }
-pre > code.sourceCode > span { display: inline-block; line-height: 1.25; }
-pre > code.sourceCode > span:empty { height: 1.2em; }
-code.sourceCode > span { color: inherit; text-decoration: inherit; }
-div.sourceCode { margin: 1em 0; }
-pre.sourceCode { margin: 0; }
-@media screen {
-div.sourceCode { overflow: auto; }
-}
-@media print {
-pre > code.sourceCode { white-space: pre-wrap; }
-pre > code.sourceCode > span { text-indent: -5em; padding-left: 5em; }
-}
-pre.numberSource code
-  { counter-reset: source-line 0; }
-pre.numberSource code > span
-  { position: relative; left: -4em; counter-increment: source-line; }
-pre.numberSource code > span > a:first-child::before
-  { content: counter(source-line);
-    position: relative; left: -1em; text-align: right; vertical-align: baseline;
-    border: none; display: inline-block;
-    -webkit-touch-callout: none; -webkit-user-select: none;
-    -khtml-user-select: none; -moz-user-select: none;
-    -ms-user-select: none; user-select: none;
-    padding: 0 4px; width: 4em;
-    color: #aaaaaa;
-  }
-pre.numberSource { margin-left: 3em; border-left: 1px solid #aaaaaa;  padding-left: 4px; }
-div.sourceCode
-  {   }
-@media screen {
-pre > code.sourceCode > span > a:first-child::before { text-decoration: underline; }
-}
-code span.al { color: #ff0000; font-weight: bold; } /* Alert */
-code span.an { color: #60a0b0; font-weight: bold; font-style: italic; } /* Annotation */
-code span.at { color: #7d9029; } /* Attribute */
-code span.bn { color: #40a070; } /* BaseN */
-code span.bu { } /* BuiltIn */
-code span.cf { color: #007020; font-weight: bold; } /* ControlFlow */
-code span.ch { color: #4070a0; } /* Char */
-code span.cn { color: #880000; } /* Constant */
-code span.co { color: #60a0b0; font-style: italic; } /* Comment */
-code span.cv { color: #60a0b0; font-weight: bold; font-style: italic; } /* CommentVar */
-code span.do { color: #ba2121; font-style: italic; } /* Documentation */
-code span.dt { color: #902000; } /* DataType */
-code span.dv { color: #40a070; } /* DecVal */
-code span.er { color: #ff0000; font-weight: bold; } /* Error */
-code span.ex { } /* Extension */
-code span.fl { color: #40a070; } /* Float */
-code span.fu { color: #06287e; } /* Function */
-code span.im { } /* Import */
-code span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Information */
-code span.kw { color: #007020; font-weight: bold; } /* Keyword */
-code span.op { color: #666666; } /* Operator */
-code span.ot { color: #007020; } /* Other */
-code span.pp { color: #bc7a00; } /* Preprocessor */
-code span.sc { color: #4070a0; } /* SpecialChar */
-code span.ss { color: #bb6688; } /* SpecialString */
-code span.st { color: #4070a0; } /* String */
-code span.va { color: #19177c; } /* Variable */
-code span.vs { color: #4070a0; } /* VerbatimString */
-code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warning */
-
-.astuce, .tip {
-	position: relative;
-	background: rgb(225, 225, 225);
-	padding: 30px 10px 3px 10px;
-	border-radius: 5px;
-}
-
-.astuce::before {
-	position: absolute;
-	content: 'astuce';
-	top: 5px;
-	left: 5px;
-	font-size: 12px;
-	font-family: var(--mono);
-}
-.tip::before {
-	position: absolute;
-	content: 'tip';
-	top: 5px;
-	left: 5px;
-	font-size: 12px;
-	font-family: var(--mono);
-}
-
-dt {
-	font-weight: bold;
-	float: left;
-	padding: 0 0.5rem 0 0;
-}
-dd {
-	margin: 0;
-	padding: 0 0 0.2rem 1rem;
-}
-
-/* RESPONSIVENESS */
-
-@media (max-width: 900px) {
-	nav { display: none; }
-	.sommaire { display: block }
-	main {
-		margin: 0 auto;
-		width: 99vw;
-	}
-}
+/* Pandoc highlight.css */
+pre>code.sourceCode{white-space:pre;position:relative;}pre>code.sourceCode>span{display:inline-block;line-height:1.25;}pre>code.sourceCode>span:empty{height:1.2em;}code.sourceCode>span{color:inherit;text-decoration:inherit;}div.sourceCode{margin:1em0;}pre.sourceCode{margin:0;}@mediascreen{div.sourceCode{overflow:auto;}}@mediaprint{pre>code.sourceCode{white-space:pre-wrap;}pre>code.sourceCode>span{text-indent:-5em;padding-left:5em;}}pre.numberSourcecode{counter-reset:source-line0;}pre.numberSourcecode>span{position:relative;left:-4em;counter-increment:source-line;}pre.numberSourcecode>span>a:first-child::before{content:counter(source-line);position:relative;left:-1em;text-align:right;vertical-align:baseline;border:none;display:inline-block;-webkit-touch-callout:none;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;padding:04px;width:4em;color:#aaaaaa;}pre.numberSource{margin-left:3em;border-left:1pxsolid#aaaaaa;padding-left:4px;}div.sourceCode{}@mediascreen{pre>code.sourceCode>span>a:first-child::before{text-decoration:underline;}}codespan.al{color:#ff0000;font-weight:bold;}/*Alert*/codespan.an{color:#60a0b0;font-weight:bold;font-style:italic;}/*Annotation*/codespan.at{color:#7d9029;}/*Attribute*/codespan.bn{color:#40a070;}/*BaseN*/codespan.bu{}/*BuiltIn*/codespan.cf{color:#007020;font-weight:bold;}/*ControlFlow*/codespan.ch{color:#4070a0;}/*Char*/codespan.cn{color:#880000;}/*Constant*/codespan.co{color:#60a0b0;font-style:italic;}/*Comment*/codespan.cv{color:#60a0b0;font-weight:bold;font-style:italic;}/*CommentVar*/codespan.do{color:#ba2121;font-style:italic;}/*Documentation*/codespan.dt{color:#902000;}/*DataType*/codespan.dv{color:#40a070;}/*DecVal*/codespan.er{color:#ff0000;font-weight:bold;}/*Error*/codespan.ex{}/*Extension*/codespan.fl{color:#40a070;}/*Float*/codespan.fu{color:#06287e;}/*Function*/codespan.im{}/*Import*/codespan.in{color:#60a0b0;font-weight:bold;font-style:italic;}/*Information*/codespan.kw{color:#007020;font-weight:bold;}/*Keyword*/codespan.op{color:#666666;}/*Operator*/codespan.ot{color:#007020;}/*Other*/codespan.pp{color:#bc7a00;}/*Preprocessor*/codespan.sc{color:#4070a0;}/*SpecialChar*/codespan.ss{color:#bb6688;}/*SpecialString*/codespan.st{color:#4070a0;}/*String*/codespan.va{color:#19177c;}/*Variable*/codespan.vs{color:#4070a0;}/*VerbatimString*/codespan.wa{color:#60a0b0;font-weight:bold;font-style:italic;}/*Warning*/
