--- a/assets/main.css
+++ b/assets/main.css
@@ -99,6 +99,10 @@ h2, h3 {
   font-style: normal;
 }
 
+hr {
+  border: 1px solid lightgray;
+}
+
 .lateral, .entete {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
@@ -209,26 +213,11 @@ button:focus {
   margin: 0;
 }
 
-.about__img-otlet {
+.about__img {
   height: 50%;
   min-width: 150px;
   max-width: 300px;
   margin-bottom: 10px;
-}
-
-.logo-list {
-  display: flex;
-  flex-wrap: nowrap;
-  margin-top: 30px;
-}
-
-.logo-list img {
-  width: 50px;
-  object-fit: contain;
-}
-
-.logo-list img+img {
-  margin-left: 20px;
 }
 
 .entete {
@@ -740,10 +729,12 @@ button:focus {
   justify-content: center;
   align-items: center;
   z-index: 1000;
+  width: 100%
 }
 
 .modal-container {
   position: relative;
+  width: 100%;
   background-color: #fff;
   padding: 30px;
   height: calc(100vh - 50px);
