[edit] hover by d3

--- a/assets/main.css
+++ b/assets/main.css
@@ -804,3 +804,8 @@ button:focus {
 line {
   stroke: gray;
 }
+
+g.translucent circle { stroke-opacity: 0.2; fill: transparent; }
+g.translucent image { opacity: 0.2; }
+line.translucent { stroke-opacity: 0.2; }
+line.highlight { stroke-width: 3; }
